--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,8 +43,14 @@ android {
 }
 
 dependencies {
-    def room_version = "2.4.1"
+//firebase:
+    implementation platform('com.google.firebase:firebase-bom:29.0.3')
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.google.firebase:firebase-auth-ktx'
+    implementation 'androidx.annotation:annotation:1.3.0'
+    implementation 'com.google.android.gms:play-services-auth:20.1.0'
 //room:
+    def room_version = "2.4.1"
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
 // To use Kotlin annotation processing tool (kapt)
