--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="itamar.stern.news">
+    package="itamar.stern.news" >
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:name=".ui.NewsApplication"
         android:allowBackup="true"
@@ -10,11 +12,14 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="false"
-        android:theme="@style/Theme.News">
+        android:theme="@style/Theme.News" >
+        <activity
+            android:name=".ui.auth.AuthActivity"
+            android:exported="false" />
         <activity
             android:name=".ui.welcome_screen.WelcomeActivity"
             android:exported="true"
-            android:theme="@style/Theme.News.NoActionBar">
+            android:theme="@style/Theme.News.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,8 +30,7 @@
             android:name=".ui.main.MainActivity"
             android:exported="false"
             android:label="@string/app_name"
-            android:theme="@style/Theme.News.NoActionBar">
-        </activity>
+            android:theme="@style/Theme.News.NoActionBar" />
     </application>
 
 </manifest>
