--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -46,8 +47,8 @@ dependencies {
 //firebase:
     implementation platform('com.google.firebase:firebase-bom:29.0.3')
     implementation 'com.google.firebase:firebase-analytics-ktx'
-    implementation 'com.google.firebase:firebase-auth-ktx'
-    implementation 'androidx.annotation:annotation:1.3.0'
+    implementation 'com.google.firebase:firebase-database-ktx'
+//google auth:
     implementation 'com.google.android.gms:play-services-auth:20.1.0'
 //room:
     def room_version = "2.4.1"
