added arrow animation to choose category. changing language refresh immediately, no need toast and closing the app

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
+        android:usesCleartextTraffic="true"
         android:name=".NewsApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -13,9 +14,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="false"
         android:theme="@style/Theme.News" >
-        <activity
-            android:name=".ui.auth.AuthActivity"
-            android:exported="false" />
         <activity
             android:name=".ui.welcome_screen.WelcomeActivity"
             android:exported="true"
