--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,8 @@ android {
 }
 
 dependencies {
+//lottie:
+    implementation "com.airbnb.android:lottie:4.2.2"
 //firebase:
     implementation platform('com.google.firebase:firebase-bom:29.0.3')
     implementation 'com.google.firebase:firebase-analytics-ktx'
