--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         <activity
             android:name=".ui.welcome_screen.WelcomeActivity"
             android:exported="true"
+            android:screenOrientation="portrait"
             android:theme="@style/Theme.News.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
